# macdeployqt-standalone

./: CMakeLists.txt
shared/: shared.cpp
